--- a/index.html
+++ b/index.html
@@ -2,52 +2,20 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>iOS Audio Experiments</title>
+		<title>HTML5 Audio Sprite Tests</title>
 	</head>
+
 	<body>
+
+		<button id="button">button</button>
+		<button id="jump" >jump</button>
+		<button id="medal">medal</button>
+		<button id="swish">swish</button>
+		<button id="points">points</button>
+		<button id="points-stop">Stop Points</button>
+
 		<script src="js/AudioTrack.js"></script>
 		<script src="js/AudioClip.js"></script>
-		<script>
-			// Create Audio objects
-			var audioTracks = {
-				sfx: new AudioTrack('sound-effects')
-			};
-
-			// Create AudioClip
-
-			var audioClips = {
-				button: new AudioClip({
-					startTime: 3,
-					endTime: 3.6
-				}),
-
-				jump: new AudioClip({
-					startTime: 0,
-					endTime: 0.8
-				}),
-
-				medal: new AudioClip({
-					startTime: 1.5,
-					endTime: 2.418
-				}),
-
-				swish: new AudioClip({
-					startTime: 1,
-					endTime: 1.3
-				}),
-
-				points: new AudioClip({
-					startTime: 4,
-					endTime: 5,
-					loops: true
-				})
-			};
-		</script>
-		<button id="button" onClick="audioClips.button.play();">button</button>
-		<button id="jump" onClick="audioClips.jump.play();">jump</button>
-		<button id="medal" onClick="audioClips.medal.play();">medal</button>
-		<button id="swish" onClick="audioClips.swish.play();">swish</button>
-		<button id="points" onClick="audioClips.points.play();">points</button>
-		<button id="points" onClick="audioClips.points.stop();">Stop Points</button>
+		<script src="js/demo.js"></script>
 	</body>
 </html>
