Refactored methods out of AudioClip and into AudioTrack - getting ready to add multi-track funcitonality.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 		<button id="medal">medal</button>
 		<button id="swish">swish</button>
 		<button id="points">points</button>
-		<button id="points-stop">Stop Points</button>
+		<button id="points-pause">pause points</button>
+		<button id="points-resume">resume points</button>
 
 		<script src="js/AudioTrack.js"></script>
 		<script src="js/AudioClip.js"></script>
