--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 	</head>
 
 	<body>
-
 		<button id="button">button</button>
 		<button id="jump" >jump</button>
 		<button id="medal">medal</button>
@@ -15,6 +14,7 @@
 		<button id="points-pause">pause points</button>
 		<button id="points-resume">resume points</button>
 
+		<script src="js/AudioMixer.js"></script>
 		<script src="js/AudioTrack.js"></script>
 		<script src="js/AudioClip.js"></script>
 		<script src="js/demo.js"></script>
